# POLY2TET

./: .Geant4_gen.sh  .MCNP6_gen.sh  CMakeLists.txt  FileGen.cpp  FileGen.h  LICENSE  POLY2TET.cpp  POLY2TET.h  README.md  ThreeVector.cpp  poly2tet.files  poly2tet.includes  tetgen.cxx
formats/: Geant4_gen.sh  MCNP6_gen.sh  PHITS_gen.sh
formats/Geant4/: CMakeLists.txt  PHANTOM.cc  example.in  init_vis.mac  vis.mac
formats/Geant4/include/: ActionInitialization.hh  DetectorConstruction.hh  ParamPSEDep.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  SteppingAction.hh  TetModelImport.hh  TetParameterisation.hh
formats/Geant4/src/: ActionInitialization.cc  DetectorConstruction.cc  ParamPSEDep.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  SteppingAction.cc  TetModelImport.cc  TetParameterisation.cc
formats/MCNP6/: PHANTOM_MCNP6.i  PHANTOM_MCNP6.i.bak
formats/PHITS/: MRCP-AM_external_input.pin.bak  PHANTOM_PHITS.pin  PHANTOM_PHITS.pin.bak
src/: FileGen.cpp  FileGen.h  POLY2TET.h  ThreeVector.h  predicates.cxx  tet2inp.cpp  tet2inp.hpp  tetgen.cxx  tetgen.h
